[change][controllers][routes] 1. add query string "title" on createFileDraft api 2. deploy api v4 version
